force-app/main/default/objects/Product_UOM__c/Product_UOM__c.object-meta.xml
<CustomObject>
    <label>Product Unit of Measure</label>
    <nameField>
        <label>Product Units</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Units of Measure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>