force-app/main/default/objects/Product_UOM__c/fields/Conversion_to_Base__c.field-meta.xml
<CustomField>
    <fullName>Conversion_to_Base__c</fullName>
    <description>Number of base units per this unit of measure.</description>
    <label>Conversion to Base</label>
    <precision>16</precision>
    <scale>6</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>