force-app/main/default/objects/Product_UOM__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <description>Indicates whether this is the default selling UOM.</description>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>