force-app/main/default/objects/Product_UOM__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Units of Measure</relationshipLabel>
    <relationshipName>Product_Product_Units</relationshipName>
    <type>Lookup</type>
</CustomField>