force-app/main/default/objects/Product_UOM__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>Unit of measure for this product.</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>